# nack

frontend/src/: App.svelte
ws-client/: Cargo.toml
ws-client/.cargo/: config.toml  config.toml.default
ws-client/setup/: install.bat  ws-client.xml
ws-client/src/: main.rs  socket_handler.rs
ws-client/src/socket_handler/: exec.rs  open_url.rs  play_url.rs
ws-server/: .gitignore  Cargo.toml  docker-compose.yml
ws-server/.cargo/: config.toml.default
ws-server/Docker/: Dockerfile
ws-server/src/: main.rs  requests_handler.rs  socket.rs
