[package]
name = "ws-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
url = "2.2.2"
futures = "0.3.27"
tokio-tungstenite = "0.18.0"
tokio-stream = "0.1.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
open = "4.0.1"
rodio = "0.17.1"
reqwest = { version = "0.11", features = ["blocking"] }