[package]
name = "ws-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3.27"
pretty_env_logger = "0.4.0"
log = "0.4"
tokio-stream = "0.1.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"